<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.employer.EmployerListingsActivity">

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Your Posted Jobs"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/jobListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/dashboardTitle"
        app:layout_constraintBottom_toTopOf="@id/postJobEmployerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/postJobEmployerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Post a Job"
        android:textColor="@color/white"
        android:backgroundTint="#0066FF"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/settingsPageEmployerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/settingsPageEmployerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textColor="@color/white"
        android:backgroundTint="#0066FF"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
