...
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewAppsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
...
